# minos

./: .gitignore  Cargo.toml  LICENSE  README.md  minos_protocol.md  minos_protocol_es.md  minos_system.md  minos_system_es.md
assets/: minos-v0_15.pest  minos-v0_16.pest  minos-v0_16M.pest  minos.pest  result.analisis  test-v0_15.minos  test.minos  v0_16.formatted.minos  v0_16.minos  v0_16M.minos  v0_17.minos.proposal
assets/simulation/: simulation_v0_16.minos
src/: actor.rs  agent.rs  authorization.rs  authorization_builder.rs  core.rs  engine.rs  errors.rs  group.rs  jwt.rs  language.rs  lib.rs  minos.rs  model.rs  parser.rs  prelude.rs  resource_manifest.rs  resources.rs  test.rs  tests.rs  text_repr.rs  toml.rs  user.rs  utils.rs
src/authorization/: actor.rs  authorization_request.rs  authorizator.rs  resource.rs
src/core/: actor.rs  authorization.rs  authorization_builder.rs  permission.rs  policies.rs  resources.rs  rule.rs
src/engine/: actor.rs  authorizator.rs  container.rs  engine.rs  engine_info.rs  minos_engine.rs  permissions.rs  resource.rs
src/language/: environment.rs  file.rs  policy.rs  requirements.rs  resource.rs  rule.rs  storage.rs
src/minos/: container.rs  environment.rs  file.rs  lang.rs  minos_parser.rs  parser.rs  policy.rs  requirements.rs  resource.rs  rule.rs
src/model/: actor.rs  assertion.rs  attribute.rs  attribute_path.rs  authorization.rs  authorization_builder.rs  parser.rs  permission.rs  policies.rs  resources.rs  rule.rs  rules.rs
src/parser/: tokens.rs  v0_14.rs  v0_15.rs  v0_16.rs  v0_16_m.rs
src/tests/: v0_16.rs  v0_16_m.rs
src/text_repr/: environment_text_repr.rs  policy_text_repr.rs  requirements_text_repr.rs  resources_text_repr.rs  rule_text_repr.rs  (+2 more)
(+3 files in other folders)
