[package]
name = "minos"
version = "0.8.0"
edition = "2021"
authors = ["johnteper <git@johnteper.me>"]
description = "Authorization library"
homepage = "https://github.com/jonhteper/minos"
license = "MIT"
repository = "https://github.com/jonhteper/minos"

[package.metadata.docs.rs]
all-features = true

[dependencies]
thiserror = "1.0.38"
versions = "5.0.0"
pest = "2.1"
pest_derive = "2.1"
getset = "0.1.2"
derived = "0.4.2"
parse-display = "0.8.0"

[features]

